--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,10 +6,12 @@ html, body {
     background-color: var(--color-background);
 }
 
+
 h1 {
     font-family: "Alata", sans-serif;
     font-weight: 400;
     font-style: normal;
+    color : var(--color-third)
 }
 
 h2 {
