--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,7 +7,8 @@ html, body {
 }
 
 .App {
-    padding-top: 90px;
+    padding: 50px 30px 30px 30px;
+    min-height: calc(100vh - 140px);
 }
 
 h1 {
