--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -48,3 +48,8 @@ p {
     z-index: 1000;
 }
 
+@keyframes gradientAnimation {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
