--- a/frontend/src/style/Login.css
+++ b/frontend/src/style/Login.css
@@ -162,7 +162,6 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  padding: 80px;
   background-color: var(--dark-bg);
   color: #fff;
   overflow: hidden;
@@ -171,6 +170,7 @@
 .login-page h1 {
   font-size: 56px;
   font-weight: 300;
+  left: 80px;
   line-height: 1.2;
   margin-bottom: 20px;
   color: #fff;
@@ -185,6 +185,7 @@
 
 .login-page p {
   font-size: 16px;
+  left: 80px;
   color: #b0b0b0;
   line-height: 1.6;
   max-width: 500px;
