--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,13 +15,14 @@ h1 {
     font-family: "Alata", sans-serif;
     font-weight: 400;
     font-style: normal;
-    color : var(--color-third)
+    color : var(--color-secondary)
 }
 
 h2 {
   font-family: "Spectral", serif;
   font-weight: 400;
   font-style: normal;
+  color : var(--color-secondary)
 }
 
 p {
