--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,7 +15,7 @@ h1 {
     font-family: "Alata", sans-serif;
     font-weight: 400;
     font-style: normal;
-    color : var(--color-secondary)
+    color : var(--color-secondary);
 }
 
 h2 {
