--- a/frontend/src/style/MyReservations.css
+++ b/frontend/src/style/MyReservations.css
@@ -1,5 +1,6 @@
 .my-reservations-container {
     padding: 20px;
+    padding-top: 45px;
     max-width: 1400px;
     margin: 0 auto;
     min-height: calc(100vh - 140px);
