Correcting colors and fontFamily

--- a/frontend/src/style/theme.css
+++ b/frontend/src/style/theme.css
@@ -13,6 +13,7 @@ body.dyslexic-mode * {
     --color-secondary: #303B4C;
     --color-background: #F4F3F7;
     --color-second-text: #F9F9FB;
+    --color-third-text: #9b9b9b;
     --color-text: #1C1B1F;
     --highlight1: #629DDF;
     --highlight2: #FD9342;
