--- a/frontend/src/style/Login.css
+++ b/frontend/src/style/Login.css
@@ -208,8 +208,8 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
+    align-items: center;
+    justify-content: center;
     background-color: #f5f5f5;
     height: 100vh;
     width: 100%;
